# total-rekall

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  database.py  embeddings.py  ingestion.py  main.py  models.py  retrieval.py  transfer.py
src/static/: index.html
