[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "total-rekall"
version = "0.1.0"
description = "RAG system for querying documentation using pgvector and Ollama. Runs entirely locally."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sentence-transformers>=3.3.0",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "httpx>=0.28.0",
    "pyarrow>=18.0.0",
    "python-multipart>=0.0.18",
]
